ID: DE2579 - User Has No Accounts - overlapping text and button DE2580 - User Has No Accounts - phone number is not tappable DE2586 - User Has No Accounts - distance issues between elements DE2585 - User Has No Accounts - no status bar DE2584 - User Has No Accounts - Body text does not match comps. DE2590 - User Has No Accounts - elements need to be centered DE2589 - User Has No Accounts - provide feedback font size too big DE2583 - User Has No Accounts - Open an Account button not centered DE2582 - User Has No Accounts - indenting for body text should be changed DE2578 - User Has No Accounts - Menu icon appears when user logs out DE2576 - User Has No Accounts - No help icon DE2597 - Open A New Account and Open an Account buttons - slight changes
Tested:
- Verified no overlapping of button and feedback text in Open Account Summary in both portrait / landscape orientations
- Verified Open Account Summary in both portrait and landscape
- Verified phone number in Bank Open Account Summary opens dialer with right number when tapped
- Verified phone number in Bank Account Summary opens dialer with right number when tapped
- Verified spacing between elements in Open Account Summary page as per comp
- Verified status bar in both Open Account Summary and with Account Summary pages
- Verified body text in Open Account Summary matches comps
- Verified elements are centered in Open Account Summary page
- Verified Menu icon is not displayed when logging out and user has no accounts
- Verified Open Account Summary page shows status bar with help icon
- Verified Open account summary shows "Open an Account" and Account summary shows "Open a New Account"

--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding"       
+   		android:paddingBottom="@dimen/forms_inner_padding"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
@@ -35,18 +36,15 @@
             style="@style/call_to_action_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/openAccountDetails"
             android:drawableRight="@drawable/external_link_icon"
             android:layout_marginTop="@dimen/modal_top_margin"
             android:drawablePadding="@dimen/between_related_elements_padding"
             android:layout_gravity="center"
-            android:text="@string/bank_open_account" />
+            android:text="@string/bank_open_new_account" />
 
          <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/provide_feedback_button"
                 android:layout_marginTop="@dimen/modal_footer_topmargin">
                 
                 <include layout="@layout/old_general_need_help_footer" android:id="@+id/need_help_footer"/>
@@ -56,8 +54,8 @@
             android:id="@+id/provide_feedback_button"
             style="@style/bank_blue_hyperlink_small"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/orange_button_margin_top"
+            android:layout_height="wrap_content"                      
+   			android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_marginTop="@dimen/orange_button_margin_top"
             android:layout_weight="0.0625"
             android:gravity="bottom"
