--- a/Discover-Bank-Phone/res/layout/bank_open_account_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_open_account_view.xml
@@ -6,23 +6,31 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">        
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/forms_inner_padding"
+   		android:paddingRight="@dimen/forms_inner_padding"
+   		android:paddingBottom="@dimen/forms_inner_padding">        
 
+        <LinearLayout
+              android:id="@+id/status_bar_layout"
+              android:layout_alignParentTop="true"
+		      android:layout_width="match_parent"
+		      android:layout_height="wrap_content"
+		      android:layout_centerHorizontal="true"
+		      android:layout_marginBottom="@dimen/between_related_elements_padding"
+		      android:orientation="vertical" >
+         	<include layout="@layout/status_bar" />
+        </LinearLayout>
+         
         <TextView
 	        android:id="@+id/openAccountDetails"
-	        android:layout_width="wrap_content"
+	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginLeft="@dimen/forms_inner_padding"
-        	android:layout_marginRight="@dimen/forms_inner_padding"
-	        android:layout_marginTop="@dimen/modal_top_margin"
+	        android:layout_below="@+id/status_bar_layout"
 	        android:text="@string/bank_open_account_details"
-	        style="@style/normal_static_text"/>
-         
+			style="@style/body_copy_mid"/>
+                 
         <Button
             android:id="@+id/openAccount"
             style="@style/call_to_action_theme"
@@ -31,30 +39,37 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/openAccountDetails"
             android:drawableRight="@drawable/external_link_icon"
-            android:layout_marginTop="@dimen/modal_top_margin"
+            android:layout_marginTop="@dimen/modal_footer_topmargin"
             android:drawablePadding="@dimen/between_related_elements_padding"
             android:layout_gravity="center"
             android:text="@string/bank_open_account" />
 
-         <RelativeLayout
+         <LinearLayout
+             	android:id="@+id/footer_layout"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/provide_feedback_button"
-                android:layout_marginTop="@dimen/modal_footer_topmargin">
+                android:layout_height="fill_parent"
+                android:layout_below="@+id/openAccount"
+                android:layout_alignParentBottom="true"
+	            android:layout_centerHorizontal="true"
+	            android:layout_marginTop="@dimen/modal_footer_topmargin"            
+   				android:paddingBottom="@dimen/between_related_elements_padding"
+                android:orientation="vertical">
                 
-                <include layout="@layout/old_general_need_help_footer" android:id="@+id/need_help_footer"/>
-        </RelativeLayout> 
-         
-        <TextView
-            android:id="@+id/provide_feedback_button"
-            style="@style/bank_blue_hyperlink_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/orange_button_margin_top"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:text="@string/feedback_text" />
+                <include 
+                    layout="@layout/old_general_need_help_footer" 
+                    android:layout_weight="0.25"
+                    android:id="@+id/need_help_footer"/>
+                
+                <TextView
+		            android:id="@+id/provide_feedback_button"
+		            style="@style/bank_blue_hyperlink_small"
+		            android:layout_weight="0.75"
+		            android:layout_width="fill_parent"
+		            android:layout_height="wrap_content"
+		            android:layout_marginTop="@dimen/between_related_elements_padding"
+		            android:gravity="center_horizontal|bottom"
+		            android:text="@string/feedback_text" />
+        </LinearLayout> 
     </RelativeLayout>
 
 </ScrollView>
