--- a/Discover-Bank-Phone/res/layout/bank_account_group_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_group_view.xml
@@ -5,21 +5,26 @@
    		android:paddingLeft="@dimen/forms_inner_padding"
         android:paddingRight="@dimen/forms_inner_padding"
    		android:orientation="vertical" >
-        
-     <TextView
-        android:id="@+id/acct_type"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/acct_type_str"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
-        style="@style/body_copy_title"/>
      
-     <TextView
-        android:id="@+id/acct_all_total"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/acct_total_str"
-        android:layout_marginBottom="@dimen/between_related_elements_padding"
-        style="@style/page_title_max"/>
+	<LinearLayout
+          android:layout_width="match_parent"
+   		  android:layout_height="wrap_content"
+   		  android:layout_marginTop="@dimen/between_related_elements_padding"
+   		  android:layout_marginBottom="@dimen/between_related_elements_padding"
+   		  android:orientation="vertical" >
+	     <TextView
+	        android:id="@+id/acct_type"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/acct_type_str"
+	        style="@style/body_copy_title"/>
+	     
+	     <TextView
+	        android:id="@+id/acct_all_total"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/acct_total_str"
+	        style="@style/page_title_max"/>
+	 </LinearLayout>
      
 </LinearLayout>
