--- a/Discover-Bank-Phone/res/layout/status_bar.xml
+++ b/Discover-Bank-Phone/res/layout/status_bar.xml
@@ -2,28 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/default_background"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/status_bar_height" >
+    android:layout_height="@dimen/status_bar_height"
+    android:layout_marginBottom="@dimen/between_related_elements_padding" >
 
     <TextView
         android:id="@+id/account_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/nav_section_pading"
+        android:layout_marginLeft="@dimen/between_related_elements_padding"
         android:ellipsize="marquee"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:maxLength="20"
         android:singleLine="true"
         android:textColor="@color/title"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:text="@string/hi_text"/>
 
     <ImageButton
         android:id="@+id/help"
         android:layout_width="@dimen/orange_help_button_size"
         android:layout_height="@dimen/orange_help_button_size"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
+        android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/between_related_elements_padding"
+        android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:background="@drawable/question_mark_icon" />
 
     <ImageView
@@ -43,5 +46,12 @@
         android:layout_toRightOf="@+id/cardBankIcon"
         android:paddingLeft="@dimen/nav_section_pading"
         android:src="@drawable/orange_down_carrot" />
+     
+     <ImageView
+        android:id="@+id/bottom_line"
+        android:layout_width="fill_parent"
+        android:layout_height="3dp"
+        android:layout_below="@+id/help"
+        android:src="@drawable/table_solid_line" />
 
 </RelativeLayout>
