--- a/Discover-Bank-Phone/res/layout/transaction_detail.xml
+++ b/Discover-Bank-Phone/res/layout/transaction_detail.xml
@@ -14,6 +14,125 @@
             style="@style/customer_service_table"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/forms_inner_padding" >
+
+                <TextView
+                    android:id="@+id/top_label1"
+                    style="@style/field_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/amount" />
+
+                <TextView
+                    android:id="@+id/amount_cell"
+                    style="@style/sub_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/edit"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@drawable/table_solid_line" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/forms_inner_padding" >
+
+                <TextView
+                    android:id="@+id/top_label2"
+                    style="@style/field_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/description" />
+
+                <TextView
+                    android:id="@+id/description_cell"
+                    style="@style/sub_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/edit"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/transaction_id"
+                    style="@style/field_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/edit" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@drawable/table_solid_line" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/forms_inner_padding" >
+
+                <TextView
+                    android:id="@+id/top_label3"
+                    style="@style/field_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/date" />
+
+                <TextView
+                    android:id="@+id/date_cell"
+                    style="@style/sub_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/edit"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@drawable/table_solid_line" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/forms_inner_padding" >
+
+                <TextView
+                    android:id="@+id/top_label4"
+                    style="@style/field_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/balance" />
+
+                <TextView
+                    android:id="@+id/balance_cell"
+                    style="@style/sub_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@string/edit"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </LinearLayout>
 
         <Button
