--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -116,6 +116,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        style="@style/field_copy_big"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:paddingRight="3dp"
@@ -128,8 +129,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:background="@drawable/edit_text_default"
-                        android:imeOptions="flagNoExtractUi"
-                        android:maxLines="1"
+                        android:imeOptions="actionDone"
+                        android:singleLine="true"
                         android:textColor="@color/black"
                         android:textCursorDrawable="@null" />
                 </LinearLayout>
@@ -233,6 +234,9 @@
                     android:visibility="invisible" />
             </RelativeLayout>
         </LinearLayout>
+        
+        
+        <!-- Pay Now Button -->
 
         <Button
             android:id="@+id/pay_now"
@@ -244,6 +248,8 @@
             android:layout_marginBottom="@dimen/modal_orange_margin_bottom"
             android:layout_marginTop="@dimen/modal_orange_margin_top"
             android:text="@string/schedule_pay_button" />
+        
+        <!-- Cancel Button -->
 
         <Button
             android:id="@+id/cancel_button"
@@ -255,6 +261,7 @@
             android:background="@null"
             android:text="@string/cancel_text" >
         </Button>
+        
     </RelativeLayout>
 
 </ScrollView>
