US6628:  Committing updates to UI based on new comps.

--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -3,9 +3,8 @@
     
     <!--  ATM locator strings -->
     <string name="atm_locator_title">ATM Locator</string>
-    <string name="atm_location_modal_title">Use Current Location</string>
-    <string name="atm_location_modal_content">
-        By clicking the "Use Current Location" button, you hereby agree that Discover may access and use your location information to show you the nearest ATM.</string>
+    <string name="atm_location_modal_title">Discover: ATM Locator</string>
+    <string name="atm_location_modal_content">Discover would like to use your current location.</string>
     <string name="atm_location_modal_allow">Allow</string>
     <string name="atm_location_modal_decline">Don\'t Allow</string>
     <string name="atm_location_modal_service_title">Temp on string title</string>
