DE2621 - Pay Bills landing needed titles and such to match comps.

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -2,7 +2,7 @@
 <resources>
     
     <!-- Section titles -->
-    <string name="pay_a_bill_title">Pay a Bill</string>
+    <string name="pay_a_bill_title">Pay Bills</string>
     <string name="welcome_to_pay_bills">Welcome to Pay Bills</string>
    	<string name="manage_payees_welcome">Welcome to Manage Payees</string>
 	<string name="manage_payees">Manage Payees</string>
@@ -18,7 +18,7 @@
  	<string name="pay_bills_delivery_text">Your payments are guaranteed to reach your payee by the \"Deliver By\" date.</string>   
 
 	<!-- Select a payee strings -->
-	<string name="select_payee_title">Select Payee</string>
+	<string name="select_payee_title">Select a Payee</string>
 	<string name="select_payee_empty">You have no payees set up. You must set up payees in order to pay bills.</string>
 	<string name="select_payee_add_new">Add New Payee</string>
 	<string name="select_payee_no_payees">Add a Payee</string>
