--- a/Discover-Bank-Phone/res/drawable/check_deposit_step_background.xml
+++ b/Discover-Bank-Phone/res/drawable/check_deposit_step_background.xml
@@ -5,4 +5,5 @@
     
     <corners android:radius="10dp"/>
 	<padding android:left="5dp" android:right="5dp"/>
+	<stroke android:width="1dp" android:color="@color/field_stroke"/>
 </shape>
