--- a/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -12,7 +12,11 @@
     <RelativeLayout
         android:id="@+id/step_indicator"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/between_related_elements_padding"
+        android:layout_marginLeft="@dimen/between_related_elements_padding"
+        android:layout_height="30dp"
         android:background="@drawable/check_deposit_step_background" >
 
         <ImageView
@@ -42,7 +46,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_toRightOf="@+id/front_label"
-            android:background="@color/sub_copy" />
+            android:background="@color/field_stroke" />
 
         <ImageView
             android:id="@+id/back_check"
@@ -52,8 +56,8 @@
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_toRightOf="@+id/vertical_separator"
             android:contentDescription="@string/empty"
-            android:visibility="invisible"
-            android:src="@drawable/black_check_mark" />
+            android:src="@drawable/black_check_mark"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/back_label"
@@ -66,11 +70,23 @@
             android:text="@string/back" />
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/close_button"
+        style="@style/white_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="@dimen/between_related_elements_padding"
+        android:layout_marginLeft="@dimen/between_related_elements_padding"
+        android:layout_marginTop="@dimen/between_related_elements_padding"
+        android:text="X" />
+
     <RelativeLayout
         android:id="@+id/button_bar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         android:background="@color/field_stroke" >
 
         <Button
@@ -94,4 +110,4 @@
             android:text="@string/capture" />
     </RelativeLayout>
 
-</FrameLayout>
+</RelativeLayout>
