--- a/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
@@ -8,7 +8,8 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="0dp" 
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:name="com.google.android.gms.maps.MapFragment"/>
     
 
 </LinearLayout>
