DE2610 Made manage payee title bold

--- a/Discover-Bank-Phone/res/layout/simple_choose_item.xml
+++ b/Discover-Bank-Phone/res/layout/simple_choose_item.xml
@@ -16,6 +16,7 @@
     	android:layout_alignParentLeft="true"
     	android:layout_toLeftOf="@+id/carrot"
     	android:singleLine="true"
+    	android:textStyle="bold"
     	style="@style/blue_choose_item_text"
     	android:paddingRight="@dimen/between_related_elements_padding"
     	android:text="Text"/>
