--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -4,20 +4,45 @@
     android:layout_height="match_parent"
     android:background="@drawable/light_gray_bkgrd" >
 
-    <fragment
+    <fragment 
         android:id="@+id/discover_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/map_navigation"
-        android:layout_alignParentTop="true" />
+        android:layout_above="@+id/map_navigation_panel"
+        android:layout_alignParentTop="true" 
+        class="com.google.android.gms.maps.SupportMapFragment"/>
 
-    <View
-        android:id="@+id/map_navigation"
+    <LinearLayout
+        android:id="@+id/map_navigation_panel"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/forms_inner_padding"
+        android:paddingBottom="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding"
+        android:paddingLeft="@dimen/forms_inner_padding"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:weightSum="2" 
+        android:orientation="horizontal">
+        
+        <ImageButton
+            android:id="@+id/list_nav"
+       		android:layout_width="0dp"
+        	android:layout_height="wrap_content"
+        	android:layout_weight="1"/>
+        
+        <ImageButton
+            android:id="@+id/map_nav"
+       		android:layout_width="0dp"
+        	android:layout_height="wrap_content"
+        	android:layout_weight="1"/>
+        
+        
+        
+    </LinearLayout>
+        
+
 
 </RelativeLayout>
