ID: US3632 Name: Epic: Select Deposit Account
Tested:
Verify Call Modal is displayed when need help is tapped on from Select Deposit Account Page
Verify Strings for Call Modal Match Comps
Verify Call Modal is dismissed when user presses Call Now
Verify number is not dialed when user presses back from Call Now Modal
Verify orientation change for Select Deposit Account
Verify Call Modal is NOT displayed when need help is tapped on from Search Payments
Verify Strings for bread crumb is displayed accurately for Select Deposit Account as per comps
Verify user is navigated to "Deposit a check - Select Account" page on a successful post to Accept terms
Verify user is navigated to "Deposit a check - Select Account" page upon clicking Check Desposit from Navigation Menu.
Test back press from Deposit a Check Select Account navigates user to Account Summary
Verify only checking, savings, money market accounts are displayed in Deposit a Check Select Account
Verify Account ending number is shown in the list items
Verify Account Nickname is displayed in list items
Verify Account balances are displayed in list items
Verify list in Deposit a Check - Select account are sorted by check, money market, savings.

--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -22,4 +22,6 @@
     
     <!-- RadioGroup Image Inner Padding -->
     <dimen name="radio_group_inner_padding">25dp</dimen>
+    
+    <dimen name="header_progress_height">45dp</dimen>
 </resources>
