--- a/Discover-Bank-Phone/res/layout/bank_header_progress.xml
+++ b/Discover-Bank-Phone/res/layout/bank_header_progress.xml
@@ -3,19 +3,26 @@
 
     <RelativeLayout
         android:id="@+id/location_text"
-        style="@style/status_indicator_style" 
-        android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_progress_height"
+        android:layout_marginBottom="@dimen/forms_inner_padding"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
+        android:background="@drawable/light_gray_bkgrd">
 
         <ImageView
             android:id="@+id/step1_confirm"
             android:layout_alignParentLeft="true"
             style="@style/status_check_mark" 
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
             android:layout_marginRight="@dimen/between_related_elements_padding"/>
 
         <LinearLayout
             android:id="@+id/step_1"
             android:layout_toRightOf="@+id/step1_confirm"
+            android:layout_height="fill_parent"
             style="@style/status_linear_layouts" >
 
             <ImageView
@@ -24,14 +31,26 @@
 
             <TextView
                 android:id="@+id/step1_title"
+                android:layout_weight="0.50"
+                android:gravity="center"
+                android:text="@string/bank_deposit_enter_details"        
                 style="@style/status_indicator_text" />
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/step2_confirm"
+            android:layout_toRightOf="@+id/step_1"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:layout_height="fill_parent"
+            style="@style/status_check_mark" />
+           
         <LinearLayout
             android:id="@+id/step_2"
             style="@style/status_linear_layouts" 
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal" >
+            android:layout_toRightOf="@+id/step2_confirm"
+            android:layout_toLeftOf="@+id/step_3" 
+            android:layout_height="fill_parent"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/middle_indicator"
@@ -40,6 +59,10 @@
 
             <TextView
                 android:id="@+id/step2_title"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/bank_deposit_capture"
+                android:layout_weight="0.50"
+                android:gravity="center"
                 style="@style/status_indicator_text"/>
         </LinearLayout>
 
@@ -47,9 +70,8 @@
             android:id="@+id/step_3"
             style="@style/status_linear_layouts" 
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/step_2"
-            android:layout_toLeftOf="@+id/help_view"
-            android:paddingRight="5dp" >
+            android:layout_height="fill_parent"
+            android:layout_toLeftOf="@+id/help_view" >
 
             <ImageView
                 android:id="@+id/last_indicator"
@@ -58,22 +80,20 @@
 
             <TextView
                 android:id="@+id/step3_title"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/bank_deposit_confirmation"
+                android:layout_weight="0.50"
+                android:gravity="center"
                 style="@style/status_indicator_text" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/step2_confirm"
-            android:layout_toLeftOf="@+id/step_2"
-            style="@style/status_check_mark" />
-        
-
 		<ImageView
 	        android:id="@+id/help_view"
-	        android:layout_width="@dimen/help_dimen"
-	        android:layout_height="@dimen/help_dimen"	        
+	        android:layout_width="@dimen/orange_help_button_size"
+	        android:layout_height="@dimen/orange_help_button_size"	        
 	        android:layout_centerVertical="true"
 	        android:layout_alignParentRight="true"
-	        android:layout_marginLeft="@dimen/between_related_elements_padding"
+	        android:layout_marginLeft="@dimen/forms_inner_padding"
 	        android:layout_marginBottom="@dimen/between_related_elements_padding"
 	        android:src="@drawable/question_mark_icon"/>  
     </RelativeLayout>
