--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -8,7 +8,9 @@
 
     <com.discover.mobile.bank.ui.widgets.BankHeaderProgressIndicator
        android:id="@+id/header"
-       android:layout_width="wrap_content"
+       android:layout_marginLeft="@dimen/forms_inner_padding"
+       android:layout_marginRight="@dimen/forms_inner_padding"
+       android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
 
    	<View
@@ -17,7 +19,6 @@
 	    android:layout_height="@dimen/divider_height"
 	    android:layout_marginLeft="@dimen/forms_inner_padding"
 	    android:layout_marginRight="@dimen/forms_inner_padding"
-	    android:layout_marginBottom="@dimen/forms_inner_padding"
 	    android:background="@drawable/gray_solid_line"
 	    />
     	
@@ -32,23 +33,36 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/forms_inner_padding" >
+            
+             <TextView
+	            android:id="@+id/page_title"
+	            style="@style/page_title"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentLeft="true"
+	            android:layout_alignParentTop="true"
+	            android:layout_marginBottom="@dimen/groups_of_elements_padding"
+	            android:text="@string/page_title" />
 
              <TextView 
                 android:id="@+id/top_note_text"
                 android:layout_marginBottom="@dimen/groups_of_elements_padding"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/page_title"
                 android:text="@string/note_title"
                 style="@style/field_copy"/>
              
             <LinearLayout
                 android:id="@+id/content_table"
                 android:layout_below="@+id/top_note_text"
-                style="@style/customer_service_table"
                 android:layout_centerHorizontal="true"
+                android:orientation="vertical"
+                android:background="@drawable/rounded_table_corners_no_padding"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
             </LinearLayout>
+           
             
             <TextView 
                 android:id="@+id/note_text_title"
@@ -93,19 +107,33 @@
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:text="@string/action_link" />
 
-            <!-- Feedback Link -->
-            <TextView
-                android:id="@+id/provide_feedback"
-                style="@style/bank_blue_hyperlink_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
+            <LinearLayout
+             	android:id="@+id/footer_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_below="@+id/actionLink"
-                android:gravity="bottom"
-                android:layout_marginBottom="@dimen/orange_button_margin_top"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:text="@string/feedback_text" />
+                android:layout_alignParentBottom="true"
+	            android:layout_centerHorizontal="true"
+	            android:layout_marginTop="@dimen/modal_footer_topmargin"            
+   				android:paddingBottom="@dimen/between_related_elements_padding"
+                android:orientation="vertical">
+                
+                <include 
+                    layout="@layout/old_general_need_help_footer" 
+                    android:layout_weight="0.25"
+                    android:id="@+id/need_help_footer"/>
+                
+                 <!-- Feedback Link -->
+                <TextView
+		            android:id="@+id/provide_feedback"
+		            style="@style/bank_blue_hyperlink_small"
+		            android:layout_weight="0.75"
+		            android:layout_width="fill_parent"
+		            android:layout_height="wrap_content"
+		            android:layout_marginTop="@dimen/between_related_elements_padding"
+		            android:gravity="center_horizontal|bottom"
+		            android:text="@string/feedback_text" />
+        	</LinearLayout> 
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
