--- a/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
@@ -5,18 +5,25 @@
     android:orientation="vertical" >
 
     <SurfaceView
-        android:id="@+id/camera_view"
+        android:id="@+id/camera_preview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/image_preview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="@string/empty"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/step_indicator"
         android:layout_width="wrap_content"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
         android:layout_marginLeft="@dimen/between_related_elements_padding"
-        android:layout_height="30dp"
+        android:layout_marginTop="@dimen/between_related_elements_padding"
         android:background="@drawable/check_deposit_step_background" >
 
         <ImageView
@@ -26,7 +33,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:contentDescription="@string/empty"
-            android:src="@drawable/black_check_mark" />
+            android:src="@drawable/black_check_mark"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/front_label"
@@ -36,7 +44,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_toRightOf="@+id/front_check"
-            android:text="@string/front" />
+            android:text="@string/front"
+            android:textStyle="bold" />
 
         <View
             android:id="@+id/vertical_separator"
@@ -46,7 +55,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_toRightOf="@+id/front_label"
-            android:background="@color/field_stroke" />
+            android:background="#aa8a9499" />
 
         <ImageView
             android:id="@+id/back_check"
@@ -65,18 +74,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_toRightOf="@+id/back_check"
-            android:text="@string/back" />
+            android:paddingRight="@dimen/between_related_elements_padding"
+            android:singleLine="true"
+            android:text="@string/back"
+            android:textColor="@color/field_copy"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <Button
         android:id="@+id/close_button"
         style="@style/white_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
         android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:layout_marginLeft="@dimen/between_related_elements_padding"
         android:layout_marginTop="@dimen/between_related_elements_padding"
@@ -92,14 +104,27 @@
         <Button
             android:id="@+id/help_button"
             style="@style/white_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/between_related_elements_padding"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
             android:text="@string/question_mark" />
 
         <Button
+            android:id="@+id/retake_button"
+            style="@style/white_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/help_button"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:layout_toLeftOf="@+id/capture_button"
+            android:text="@string/retake" />
+
+        <Button
+            android:id="@+id/capture_button"
             style="@style/call_to_action_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -109,5 +134,17 @@
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:text="@string/capture" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/countdown_label"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/countdown_background"
+        android:gravity="center"
+        android:text="3"
+        android:textColor="@color/white"
+        android:textSize="45sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
