US6909 : Accidently Removed Strings that were being used by Henry's code.

--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -3,6 +3,10 @@
 
     <string name="bank_deposit_title">Deposit a Check</string>
     <string name="bank_deposit_page_title">Welcome to Mobile Check Deposit</string>
+    <string name="bank_deposit_enter_details">Enter Details</string>
+    <string name="bank_deposit_capture">Capture</string>
+    <string name="bank_deposit_confirmation">Confirmation</string>
+    <string name="bank_deposit_select_account">Select Account</string>
     
     <string name="capture">Capture</string>
     <string name="front">Front</string>
