--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -20,7 +20,7 @@
 	<!-- Select a payee strings -->
 	<string name="select_payee_title">Select a Payee</string>
 	<string name="select_payee_empty">You have no payees set up. You must set up payees in order to pay bills.</string>
-	<string name="select_payee_add_new">Add New Payee</string>
+	<string name="select_payee_add_new">Add Another Payee</string>
 	<string name="select_payee_no_payees">Add a Payee</string>
 	
 	<!-- Review payments -->
