--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -7,18 +7,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <com.discover.mobile.common.nav.HeaderProgressIndicator
+        <com.discover.mobile.bank.ui.widgets.BankHeaderProgressIndicator
             android:id="@+id/schedule_pay_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true" />
 
+        <ImageButton
+            android:id="@+id/help"
+            style="@style/orange_help_button"
+            android:layout_width="@dimen/orange_help_button_size"
+            android:layout_height="@dimen/orange_help_button_size"
+            android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/schedule_pay_header" />
+        
         <TextView
             android:id="@+id/conflict_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/schedule_pay_header"
-            android:padding="@dimen/between_related_elements_padding"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="@dimen/between_related_elements_padding"
             android:text="@string/schedule_pay_duplicate_payment"
             android:textColor="@color/error_indicator"
             android:visibility="gone" />
