US6909 : TA13776 : Updated UI so that counter appears in the center of the preview rather than the center of the screen. Updated buttons on the screen so that they work as required. TA13781 : Capture button stays 'pressed' while countdown is happening. TA13784/TA13783: Confirm and retake buttons now appear after a picture is taken. There are now white boundary outlines for the check boundaries. TA13779 Create breadcrumb. The breadcrumb now works and places a check mark next to the completed check side. The user can take one picture, and then move onto the second picture, or restart the picture they are on, and the breadcrumb keeps track of it.

--- a/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
@@ -4,95 +4,154 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <SurfaceView
-        android:id="@+id/camera_preview"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/image_preview"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:contentDescription="@string/empty"
-        android:visibility="gone" />
+        android:layout_above="@+id/button_bar" >
 
-    <RelativeLayout
-        android:id="@+id/step_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/between_related_elements_padding"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
-        android:background="@drawable/check_deposit_step_background" >
+        <SurfaceView
+            android:id="@+id/camera_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <ImageView
-            android:id="@+id/front_check"
+            android:id="@+id/countdown_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:layout_centerInParent="true"
             android:contentDescription="@string/empty"
-            android:src="@drawable/black_check_mark"
-            android:visibility="invisible" />
+            android:src="@drawable/chckdep_3"
+            android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/front_label"
-            style="@style/sub_copy_medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:layout_toRightOf="@+id/front_check"
-            android:text="@string/front"
-            android:textStyle="bold" />
-
-        <View
-            android:id="@+id/vertical_separator"
-            android:layout_width="1dp"
+        <ImageView
+            android:id="@+id/image_preview"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:layout_toRightOf="@+id/front_label"
-            android:background="#aa8a9499" />
+            android:contentDescription="@string/empty"
+            android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/back_check"
+            android:id="@+id/image_bracket_top_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:layout_toRightOf="@+id/vertical_separator"
+            android:layout_alignLeft="@+id/step_indicator"
+            android:layout_below="@+id/step_indicator"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
             android:contentDescription="@string/empty"
-            android:src="@drawable/black_check_mark"
-            android:visibility="invisible" />
+            android:src="@drawable/chckdep_photo_corner" />
 
-        <TextView
-            android:id="@+id/back_label"
-            style="@style/sub_copy_medium"
+        <ImageView
+            android:id="@+id/image_bracket_top_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/back_check"
-            android:paddingRight="@dimen/between_related_elements_padding"
-            android:singleLine="true"
-            android:text="@string/back"
-            android:textColor="@color/field_copy"
-            android:textStyle="bold" />
-    </RelativeLayout>
+            android:layout_alignRight="@+id/close_button"
+            android:layout_below="@+id/close_button"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:contentDescription="@string/empty"
+            android:rotation="90"
+            android:src="@drawable/chckdep_photo_corner" />
 
-    <Button
-        android:id="@+id/close_button"
-        style="@style/white_button"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="@dimen/between_related_elements_padding"
-        android:layout_marginLeft="@dimen/between_related_elements_padding"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
-        android:text="X" />
+        <ImageView
+            android:id="@+id/image_bracket_bottom_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_bar"
+            android:layout_alignLeft="@+id/step_indicator"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:contentDescription="@string/empty"
+            android:rotation="-90"
+            android:src="@drawable/chckdep_photo_corner" />
+
+        <ImageView
+            android:id="@+id/image_bracket_bottom_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_bar"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/close_button"
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:contentDescription="@string/empty"
+            android:rotation="180"
+            android:src="@drawable/chckdep_photo_corner" />
+
+        <ImageView
+            android:id="@+id/close_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:contentDescription="@string/empty"
+            android:src="@drawable/chckdep_close_button" />
+
+        <RelativeLayout
+            android:id="@+id/step_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="@dimen/between_related_elements_padding"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:background="@drawable/check_deposit_step_background" >
+
+            <ImageView
+                android:id="@+id/front_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/between_related_elements_padding"
+                android:contentDescription="@string/empty"
+                android:src="@drawable/chckdep_checkmark_gray"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/front_label"
+                style="@style/sub_copy_medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/between_related_elements_padding"
+                android:layout_toRightOf="@+id/front_check"
+                android:text="@string/front"
+                android:textStyle="bold" />
+
+            <View
+                android:id="@+id/vertical_separator"
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/between_related_elements_padding"
+                android:layout_toRightOf="@+id/front_label"
+                android:background="#aa8a9499" />
+
+            <ImageView
+                android:id="@+id/back_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/between_related_elements_padding"
+                android:layout_toRightOf="@+id/vertical_separator"
+                android:contentDescription="@string/empty"
+                android:src="@drawable/chckdep_checkmark_gray"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/back_label"
+                style="@style/sub_copy_medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/back_check"
+                android:paddingRight="@dimen/between_related_elements_padding"
+                android:singleLine="true"
+                android:text="@string/back"
+                android:textColor="@color/field_copy"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/button_bar"
@@ -101,15 +160,15 @@
         android:layout_alignParentBottom="true"
         android:background="@color/field_stroke" >
 
-        <Button
+        <ImageView
             android:id="@+id/help_button"
-            style="@style/white_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/between_related_elements_padding"
-            android:text="@string/question_mark" />
+            android:background="@drawable/check_deposit_help_button"
+            android:contentDescription="@string/empty" />
 
         <Button
             android:id="@+id/retake_button"
@@ -121,7 +180,12 @@
             android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:layout_toLeftOf="@+id/capture_button"
-            android:text="@string/retake" />
+            android:drawableLeft="@drawable/chckdep_trash_icon"
+            android:drawablePadding="@dimen/groups_of_elements_padding"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:text="@string/retake"
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/capture_button"
@@ -132,19 +196,11 @@
             android:layout_alignTop="@+id/help_button"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:drawableLeft="@drawable/chckdep_camera_icon"
+            android:drawablePadding="@dimen/groups_of_elements_padding"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
             android:text="@string/capture" />
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/countdown_label"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/countdown_background"
-        android:gravity="center"
-        android:text="3"
-        android:textColor="@color/white"
-        android:textSize="45sp"
-        android:visibility="gone" />
 
 </RelativeLayout>
