DE2730 - Removed unused object associated with defect and prevent NullPointerException from occuring.

--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -50,6 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
+                    android:singleLine="true"
                     android:ellipsize="end"
                     android:scrollHorizontally="true" />
             </RelativeLayout>
@@ -74,6 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
+                    android:singleLine="true"
                     android:ellipsize="end"
                     android:scrollHorizontally="true" />
 
