--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -1,11 +1,13 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     
     <style name="orange_help_button">
-        <item name="android:layout_marginBottom">@dimen/groups_of_elements_padding</item>
+        <item name="android:layout_marginBottom">@dimen/between_related_elements_padding</item>
         <item name="android:layout_marginLeft">@dimen/groups_of_elements_padding</item>
-        <item name="android:layout_marginRight">@dimen/groups_of_elements_padding</item>
+        <item name="android:layout_marginRight">@dimen/help_icon_right_padding</item>
         <item name="android:layout_marginTop">@dimen/between_related_elements_padding</item>
         <item name="android:background">@drawable/question_mark_icon</item>
+        <item name="android:layout_width">@dimen/orange_help_button_size</item>
+        <item name="android:layout_height">@dimen/orange_help_button_size</item>
     </style>
     
     <style name="page_title">
