--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="call_to_actions_padding">15dp</dimen>
     <dimen name="orange_button_left_right_padding">30dp</dimen>
     <dimen name="between_related_elements_padding">7dp</dimen>
+    <dimen name="help_icon_right_padding">19dp</dimen>
     <dimen name="groups_of_elements_padding">20dp</dimen>
     <dimen name="orange_button_margin_top">40dp</dimen>
     <dimen name="orange_help_button_size">30dp</dimen>
