DE2679 Updated the help icon location in the payee flow

--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -5,21 +5,16 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/forms_inner_padding" 
-        android:paddingLeft="@dimen/forms_inner_padding" 
-        android:paddingRight="@dimen/forms_inner_padding" 
-        android:paddingBottom="@dimen/orange_button_margin_top"
-        android:background="@drawable/light_gray_bkgrd">
+       android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/light_gray_bkgrd"
+        android:paddingBottom="@dimen/forms_inner_padding"
+        android:paddingLeft="@dimen/forms_inner_padding">
 
         <ImageButton
             android:id="@+id/help"
-            android:background="@drawable/question_mark_icon"
-            android:layout_width="@dimen/orange_help_button_size"
-            android:layout_height="@dimen/orange_help_button_size"
+            style="@style/orange_help_button"
             android:layout_alignParentRight="true"
-            android:contentDescription="@null"
             android:layout_alignParentTop="true" />
 
         <TextView
