--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -79,7 +79,7 @@
     </style>
     
     <style name="blue_choose_item_text">
-        <item name="android:textColor">@color/blue_link</item>
+        <item name="android:textColor">@color/menu_dark_gray</item>
         <item name="android:textSize">@dimen/body_copy_min</item>
     </style>
 </resources>
